find and delete post by id